--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ body {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .watch-footer {
@@ -212,6 +212,7 @@ body {
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
+    outline: none;
 }
 
 .gear:hover {
